Bug 1224280 - Fix asm.js console warning when disabled by debugger and parsing off-thread. r=luke