js/src/vm/HelperThreads.cpp
@@ -215,13 +215,6 @@ ParseTask::init(JSContext* cx, const ReadOnlyCompileOptions& options)
     if (!this->options.copy(cx, options))
         return false;
 
-    // If the main-thread global is a debuggee that observes asm.js, disable
-    // asm.js compilation. This is preferred to marking the task compartment
-    // as a debuggee, as the task compartment is (1) invisible to Debugger and
-    // (2) cannot have any Debuggers.
-    if (cx->compartment()->debuggerObservesAsmJS())
-        this->options.asmJSOption = false;
-
     return true;
 }
 
